// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should match to empty snapshot 1`] = `""`;

exports[`List should match to snapshot with custom delimeter 1`] = `
<ul
  className="list"
>
  <li>
    Adventure,Action
  </li>
</ul>
`;

exports[`List should match to snapshot with data 1`] = `
<ul
  className="list"
>
  <li
    key="Adventure"
  >
    Adventure
  </li>
  <li
    key="Action"
  >
    Action
  </li>
</ul>
`;
